# meaningless

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE.md  PHILOSOPHY.md  README.md  REQUIREMENTS.txt  REQUIREMENTS_DEVELOPMENT.txt  REQUIREMENTS_PYPI.txt  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md  genindex.html  index.html  meaningless.html  modules.html  py-modindex.html  release_docs.bat  search.html  searchindex.js  utilities.html
experimental/: README.md  download_books.py  find_keyword_online.py  get_chapter_list_online.py  nrsvue_apocrypha_web_extractor.py  system_test_helper.py
meaningless/: __init__.py  bible_base_downloader.py  bible_base_extractor.py  bible_csv_downloader.py  bible_csv_extractor.py  bible_json_downloader.py  bible_json_extractor.py  bible_web_extractor.py  bible_xml_downloader.py  bible_xml_extractor.py  bible_yaml_downloader.py  bible_yaml_extractor.py
sphinx/: README.md  release_docs.bat
test/: system_tests_bible_translations.py  unit_tests_bible_base_downloader.py  unit_tests_bible_base_extractor.py  unit_tests_bible_csv_downloader.py  unit_tests_bible_csv_extractor.py  unit_tests_bible_extractor.py  unit_tests_bible_json_downloader.py  unit_tests_bible_json_extractor.py  unit_tests_bible_list_extractor.py  unit_tests_bible_translations.py  unit_tests_bible_web_extractor.py  unit_tests_bible_xml_downloader.py  unit_tests_bible_xml_extractor.py  unit_tests_bible_yaml_downloader.py  unit_tests_bible_yaml_extractor.py  unit_tests_common.py  (+5 more)
(+1381 files in other folders)
